@@ -1,5 +1,11 @@
 2013-01-21  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
+	* build-all.sh: Add --elf32/--no-elf32 and --linux/--no-linux
+	options. Negate tests where empty "then" clause.
+	* build-uclibc.sh: Remove build of simulator.
+
+2013-01-21  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
 	* dejagnu/baseboards/arc-linux-aa4.exp: Use a hostname rather than
 	number.
 
